# xabarchi_bot

./: .gitignore  README.md  bot.py  freeze.txt  main.py  pyproject.toml  requirements.txt
app/: admin.py  apps.py  models.py  serializer.py  signals.py  urls.py  utils.py  views.py
root/: settings.py  urls.py  wsgi.py
