[project]
name = "xabarchi_bot"
version = "0.1.0"
description = "Telegram uchun Django + Aiogram asosidagi bot"
authors = [{ name = "Jaloliddin", email = "iamjaloliddinjumanov@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "aiofiles==23.2.1",
    "aiogram==3.13.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.10.11",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "Django==5.2.5",
    "django-jazzmin==3.0.1",
    "django-phonenumber-field==8.1.0",
    "djangorestframework==3.16.1",
    "dotenv==0.9.9",
    "drf-yasg==1.21.10",
    "frozenlist==1.7.0",
    "gunicorn==23.0.0",
    "idna==3.10",
    "inflection==0.5.1",
    "magic-filter==1.0.12",
    "multidict==6.6.4",
    "packaging==25.0",
    "phonenumbers==9.0.12",
    "propcache==0.3.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "requests==2.32.5",
    "sqlparse==0.5.3",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "yarl==1.20.1",
    "pillow==11.3.0",
    "mysql==0.0.3",
    "httpie"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]


[tool.uv]
